css/style.css
/*

this is a change
*/

/****************
     RESET
****************/

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: Avenir, "segue ui", sans-serif;
    font-size: 16px;
}


body {
    background-color: #f9f9f9;
}

.size {
    background-color: cadetblue;
    color: #ffffff;
    font-size: 2rem;
    font-family: "Avenir";
    position: fixed;
    top: 0px;
    left: 0px;
    width: 100vw;
    text-align: center;
}

main {
    display: grid;
    grid-row-gap: 2rem;
    grid-column-gap: 2rem;
    margin-top: 3rem;
    padding: 1.25rem;
    transition: all .3s ease-in-out;
}


picture, img {
    max-width: 100%;
    display: block;
    /*height: 17rem;*/
    height: 300px;
}

img {
    padding: 1rem;

}

.full-bleed {
    padding: 0;
}

.card {
    width: 100%;
    height: 31.5rem;
    background-color: white;
    box-shadow: 0 5px 20px 0 rgba(0, 0, 0, .1);
    overflow: hidden;
    transition: all .2s ease-in-out;

}

.card-text-container {
    padding: 1rem;
}

.card-heading {
    margin-bottom: .5rem;
}

.card-heading > h2 {
    font-size: 1.2rem;
    text-align: left;
}

.card-text {
    color: #3c3c3c;
    height: 7rem;
    overflow: hidden;
    font-size: .8rem;
    line-height: 1.4;
    text-align: justify;
}

.card-footer {
    display: flex;
    justify-content: flex-end;
    height: 32px;
}


.ion-ios-arrow-round-forward {
    font-size: 2rem;
    font-stretch: expanded;
    font-weight: bold;
    color: rgba(235, 115, 19, 0.56);
}

.emp {
    font-weight: bold;
}


/************************************

            INTERACTIONS

*************************************/

a {
    text-decoration: none;
}

.card:hover {
}

a:visited {
color: inherit;

}

.card:active {
    transform: scale(.97);
}




/************************************

            MEDIA QUERIES

*************************************/

/* This is only for the width */
@media screen and (max-width: 499px) {

   .size::after {
       content: "Under 500px";
   }

}

/**********  TABLET VIEW   ***********/

@media screen and (min-width: 500px) {

    main {
        grid-template-columns: 1fr 1fr;
    }

    /* This is only for the width */
    .size {
        background-color: #eb8531;
    }

    .size::after {
        content: "Over 500px";
    }

}

/**********  DESKTOP VIEW   ***********/

@media screen and (min-width: 960px) {

    main {
        grid-template-columns: 1fr 1fr 1fr;
        max-width: 960px;
        margin: 3rem auto 0 auto;
    }

    /* This is only for the width */
    .size {
        background-color: skyblue;
    }

    .size::after{
        content: "Over 960px";
    }

}

